--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter city" required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main></main>
+      <footer></footer>
+    </div>
+  </body>
 </html>
