updated the main and footer elements

--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
           <input type="submit" value="search" />
         </form>
       </header>
-      <main></main>
-      <footer></footer>
+      <main>
+        <div class="weather-info">
+          <h1>Helsinki</h1>
+          <p>
+            Wednesday | 19:04, Sunny <br />
+            Humidity:70% | Wind: 6.34km/h
+          </p>
+        </div>
+        <div class="temperature-info">☀️27℃</div>
+      </main>
+      <footer>
+        <p>
+          This project was coded by
+          <a href="https://github.com/Shandukani19" target="_blank"
+            >Shandu Mudzwiri</a
+          >
+          and is
+          <a href="#" target="_blank"> on GitHub</a>
+          and
+          <a href="#" target="_blank">hosted on Netlify</a>
+        </p>
+      </footer>
     </div>
   </body>
 </html>
