--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1>Helsinki</h1>
           <p>
             Wednesday | 19:04, Sunny <br />
-            Humidity:70% | Wind: 6.34km/h
+            Humidity:<strong>70%</strong> | Wind: <strong>6.34km/h</strong>
           </p>
         </div>
         <div class="temperature-info">☀️27℃</div>
