--- a/index.html
+++ b/index.html
@@ -11,19 +11,33 @@
     <div class="weather-app">
       <header>
         <form>
-          <input type="search" placeholder="Enter city" required />
-          <input type="submit" value="search" />
+          <input
+            type="search"
+            placeholder="Enter city"
+            required
+            class="search-input"
+          />
+          <input type="submit" value="search" class="search-button" />
         </form>
       </header>
       <main>
-        <div class="weather-info">
-          <h1>Helsinki</h1>
-          <p>
-            Wednesday | 19:04, Sunny <br />
-            Humidity:<strong>70%</strong> | Wind: <strong>6.34km/h</strong>
-          </p>
+        <div class="current-weather">
+          <div class="weather-info">
+            <h1 class="city">Helsinki</h1>
+            <p>
+              <span class="current-day"> Wednesday </span> |
+              <span class="current-hour"> 19 </span>:
+              <span class="current-minutes"> 04 </span>,
+              <span class="current-condition>"> Sunny </span> <br />
+              Humidity:<strong>70%</strong> | Wind: <strong>6.34km/h</strong>
+            </p>
+          </div>
+          <div class="temperature-info">
+            <span class="temperature-icon"> ☀️ </span>
+            <span class="temperature-value"> 27 </span>
+            <span class="temperature-unit"> ℃ </span>
+          </div>
         </div>
-        <div class="temperature-info">☀️27℃</div>
       </main>
       <footer>
         <p>
