updated html and css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </main>
       <footer>
         <p>
-          This project was coded by
+          Coded by
           <a href="https://github.com/Shandukani19" target="_blank"
             >Shandu Mudzwiri</a
           >
