--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>
               <span class="current-day"> Wednesday </span> |
               <span class="current-hour"> 19 </span>:
-              <span class="current-minutes"> 04 </span>,
+              <span class="current-minutes"> 04 </span>|
               <span class="current-condition>"> Sunny </span> <br />
               Humidity:<strong>70%</strong> | Wind: <strong>6.34km/h</strong>
             </p>
