injected search functionality using API

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="current-weather">
           <div class="weather-info">
-            <h1 class="city" id="city">Helsinki</h1>
+            <h1 class="city" id="city"></h1>
             <p>
               <span class="current-day"> Wednesday </span> |
               <span class="current-hour"> 19 </span>:
@@ -41,7 +41,7 @@
           </div>
           <div class="temperature-info">
             <span class="temperature-icon"> ☀️ </span>
-            <span class="temperature-value"> 27 </span>
+            <span class="temperature-value" id="temperature"> </span>
             <span class="temperature-unit"> ℃ </span>
           </div>
         </div>
