updated weather conditions using API

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
           <div class="weather-info">
             <h1 class="city" id="city"></h1>
             <p>
-              <span class="current-day"> Wednesday </span> |
-              <span class="current-hour"> 19 </span>:
-              <span class="current-minutes"> 04 </span>|
-              <span class="current-condition>"> Sunny </span> <br />
-              Humidity:<strong>70%</strong> | Wind: <strong>6.34km/h</strong>
+              <span id="current-day"> Wednesday </span> |
+              <span id="current-hour"> 19 </span>:
+              <span id="current-minutes"> 04 </span>|
+              <span id="current-condition"> Sunny </span> <br />
+              Humidity:<strong id="humidity"></strong> | Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="temperature-info">
