injected more accurate weather data

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
           <div class="weather-info">
             <h1 class="city" id="city"></h1>
             <p>
-              <span id="current-day"> Wednesday </span> |
-              <span id="current-hour"> 19 </span>:
-              <span id="current-minutes"> 04 </span>|
-              <span id="current-condition"> Sunny </span> <br />
+              <span id="current-time"> </span> |
+              <span id="current-condition"> </span> <br />
               Humidity:<strong id="humidity"></strong> | Wind:
               <strong id="wind"></strong>
             </p>
