--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </p>
           </div>
           <div class="temperature-info">
-            <span class="temperature-icon"> ☀️ </span>
+            <span id="icon">
+              
+            </span>
             <span class="temperature-value" id="temperature"> </span>
             <span class="temperature-unit"> ℃ </span>
           </div>
