--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             >Shandu Mudzwiri</a
           >
           and is
-          <a href="#" target="_blank"> on GitHub</a>
+          <a
+            href="https://github.com/Shandukani19/Homework-week7"
+            target="_blank"
+          >
+            on GitHub</a
+          >
           and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
