--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
             </p>
           </div>
           <div class="temperature-info">
-            <span id="temperature-icon">
-              <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-                class="temperature-icon"
-              />
-            </span>
+            <span id="temperature-icon"> </span>
             <span class="temperature-value" id="temperature"> </span>
             <span class="temperature-unit"> ℃ </span>
           </div>
