added js,  updated html and css

--- a/index.html
+++ b/index.html
@@ -44,19 +44,8 @@
             <span class="temperature-unit"> ℃ </span>
           </div>
         </div>
-        <div class="weather-forecast">
-         <div class="row">
-          <div class="column-2">
-            <div class="forecast-day">Wed</div>
-            <div class="forecast-icon">
-              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png" alt="" width="60" />
-            </div>
-            <div class="forecast-temperatures">
-              <span class="temperature-max">10°</span>
-              <span class="temperature-min">3°</span>
-            </div>
-          </div>
-         </div>
+        <div class="weather-forecast" id="forecast">
+          
         </div>
       </main>
       <footer>
